salesforce_sfdx/main/default/objects/Order/fields/Ott_Number_of_Order_Processing_Incidents__c.field-meta.xml
<CustomField>
    <fullName>Ott_Number_of_Order_Processing_Incidents__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of incidents (fatal) occurred during order processing</description>
    <inlineHelpText>Total number of incidents (fatal) occurred during order processing</inlineHelpText>
    <label>Number of Order Processing Incidents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>