salesforce_sfdx/main/default/objects/Order/fields/Otter_Delivery_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Otter_Delivery_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery coordinator supporting the delivery manager</description>
    <inlineHelpText>Delivery coordinator supporting the delivery manager</inlineHelpText>
    <label>Delivery Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Coordinator_for_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>