salesforce_sfdx/main/default/objects/Order/fields/Otter_Delivery_Manager__c.field-meta.xml
<CustomField>
    <fullName>Otter_Delivery_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery manager responsible for overall project implementation</description>
    <inlineHelpText>Delivery manager responsible for overall project implementation</inlineHelpText>
    <label>Delivery Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Manager_for_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>