salesforce_sfdx/main/default/objects/Order/fields/Otter_Had_Order_Processing_Incidents__c.field-meta.xml
<CustomField>
    <fullName>Otter_Had_Order_Processing_Incidents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if any incidents (fatal) occurred during order processing</description>
    <inlineHelpText>Indicates if any incidents (fatal) occurred during order processing</inlineHelpText>
    <label>Had Order Processing Incidents</label>
    <type>Checkbox</type>
</CustomField>