salesforce_sfdx/main/default/objects/Order/fields/Otter_Order_Processing_Finished__c.field-meta.xml
<CustomField>
    <fullName>Otter_Order_Processing_Finished__c</fullName>
    <description>Indicates a moment when order management finished order processing (i.e. order is completed, suspended or cancelled)</description>
    <inlineHelpText>Indicates a moment when order management finished order processing (i.e. order is completed, suspended or cancelled)</inlineHelpText>
    <label>Order Processing Finished</label>
    <type>DateTime</type>
</CustomField>