salesforce_sfdx/main/default/objects/Order/fields/Otter_Order_Processing_Started__c.field-meta.xml
<CustomField>
    <fullName>Otter_Order_Processing_Started__c</fullName>
    <description>Indicates a moment when an order has been submitted to order management for processing</description>
    <inlineHelpText>Indicates a moment when an order has submitted to order management for processing</inlineHelpText>
    <label>Order Processing Started</label>
    <type>DateTime</type>
</CustomField>