salesforce_sfdx/main/default/objects/Order/fields/Otter_Total_Order_Processing_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Otter_Total_Order_Processing_Time_Days__c</fullName>
    <description>Total time spent on processing an order (from submission to, generally, completion) in days</description>
    <formula>IF(nOT(ISBLANK(Otter_Order_Processing_Started__c)),

IF(NOT(ISBLANK(Otter_Order_Processing_Finished__c)), Otter_Order_Processing_Finished__c - Otter_Order_Processing_Started__c,
 NOW() - Otter_Order_Processing_Started__c ),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time spent on processing an order (from submission to, generally, completion) in days</inlineHelpText>
    <label>Total Order Processing Time, Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>